test lodash differenceBy

--- a/miao/lodash/differenceBy.html
+++ b/miao/lodash/differenceBy.html
@@ -4,9 +4,8 @@
      * @Date: 2019-07-23 22:18:53 
      * @Desc:array数组 value需要对比的数据 iteratee迭代器  
      */
-    var differenceBy = function (array, args, iteratee) {
-        var difference = function (array, args) {
-            var arg = args.join().split(',').map(Number)
+    var differenceBy = function (array,...args, iteratee) {
+        var difference = function (array, arg) {
             var temp = []
             for (let i = 0, j = 0; i < array.length; i++) {
                 if (arg.indexOf(array[i]) == -1) {
@@ -20,16 +19,14 @@
         if (iteratee) {
             switch (typeof iteratee) {
                 case 'function':
-                    var values = []
-                    var ary = []
-                    var arg = args.join().split(',').map(Number)
+                    var arg = args.join(',').split(',').map(Number)
                     for (let i = 0; i < arg.length; i++) {
-                        values[i] = iteratee(arg[i])
+                        arg[i] = iteratee(arg[i])
                     }
                     for (let i = 0; i < array.length; i++) {
-                        ary[i] = iteratee(array[i])
+                        array[i] = iteratee(array[i])
                     }
-                    return difference(ary, values)
+                    return difference(array, arg)
                     break;
                 case 'string':
                     break;
@@ -39,4 +36,8 @@
         }
 
     }
+    debugger;
+    console.log(differenceBy([1, 2, 3, 4, 5, 6, 7, 8], [1, 3], [4, 8], [6], it => it))
+
+
 </script>
