--- a/miao/lodash/differenceBy.html
+++ b/miao/lodash/differenceBy.html
@@ -12,11 +12,11 @@
                 var arg = args.join().split(',').map(Number)
                 var temp = []
                 for (let i = 0; i < arg.length; i++) {
-                    arg[0] = iteratee(arg[0])
+                    arg[i] = iteratee(arg[i])
                 }
                 for (let j = 0, x = 0; j < array.length; j++) {
                     if (arg.indexOf(iteratee(array[j])) == -1) {
-                        temp[x] = iteratee(array[j])
+                        temp[x] = array[j]
                         x++
                     }
                 }
@@ -28,7 +28,7 @@
                 for (let i = 0, k = 0, j = 0; i < array.length; i++) {
                     if (arg[iteratee] != array[i][iteratee]) {
                         temp[k] = array[i]
-                        j++
+                        k++
                     }
                 }
                 return array = temp
@@ -47,7 +47,8 @@
     }
 
     debugger;
-    console.log(differenceBy([{ "x": 2 }, { "x": 1 }], [{ "x": 1 }], "x"))
+    console.log(differenceBy([2.1,1.2],[2.3,3.4],Math.floor));
+     
 
 
 </script>
