--- a/miao/lodash/differenceWith.html
+++ b/miao/lodash/differenceWith.html
@@ -1,10 +1,12 @@
 <script>
     var differenceWith = function (array, args, comparator) {
         var obj = Object.keys(args[0])
-        for (let i = 0; i < array.length; i++) {
-            comparator(array[i],args[0])
+        var temp=[]
+        for (let i = 0,j=0; i < array.length; i++) {
+            temp[j]=comparator(array[i],args[0])
+            j++
         }
-        return array
+        return array=temp
 
     }
     differenceWith([{ "x": 1, "y": 2 }, { "x": 2, "y": 1 }], [{ "x": 1, "y": 2 }], function (n, t) { return Nt(n, t); })
