--- a/miao/lodash/get.html
+++ b/miao/lodash/get.html
@@ -1,7 +1,7 @@
 <script>
 
   function get(obj, path, defaultVal) {
-    var path = wayne_18o.toPath(path)
+    var path = wayne18o.toPath(path)
     for (var i = 0; i < path.length; i++) {
       if (obj == undefined) {
         return defaultVal
