--- a/miao/lodash/dropRigthWhile.html
+++ b/miao/lodash/dropRigthWhile.html
@@ -13,6 +13,12 @@
     }
     var dropRightWhile = function (array, predicate) {
         predicate = iteratee(predicate)
+        for (let i = array.length - 1; i >= 0; i--) {
+            if (!predicate(array[i])) {
+                array.pop()
+            }
+        }
+        return array
     }
     var dropWhile = function (array, predicate) {
         predicate = iteratee(predicate)
