--- a/miao/lodash/dropRigthWhile.html
+++ b/miao/lodash/dropRigthWhile.html
@@ -13,12 +13,12 @@
     }
     var dropRightWhile = function (array, predicate) {
         predicate = iteratee(predicate)
-        for (let i = array.length - 1; i >= 0; i--) {
+        for (var i = 0; i < array.length; i++) {
             if (!predicate(array[i])) {
-                array.pop()
+                return array.slice(i)
             }
         }
-        return array
+        return array.slice(i)
     }
     var dropWhile = function (array, predicate) {
         predicate = iteratee(predicate)
