--- a/miao/lodash/dropRigthWhile.html
+++ b/miao/lodash/dropRigthWhile.html
@@ -13,12 +13,13 @@
     }
     var dropRightWhile = function (array, predicate) {
         predicate = iteratee(predicate)
-        for (var i = 0; i < array.length; i++) {
-            if (!predicate(array[i])) {
-                return array.slice(i)
+        for (var i = array.length - 1; i > 0; i--) {
+            if (predicate(array[i])) {
+                array.pop()
+            } else {
+                return array
             }
         }
-        return array.slice(i)
     }
     var dropWhile = function (array, predicate) {
         predicate = iteratee(predicate)
