--- a/miao/lodash/dropRigthWhile.html
+++ b/miao/lodash/dropRigthWhile.html
@@ -74,6 +74,11 @@
         }
     }
     function isEqual(val, other) {
+        if (!Boolean(val) && !Boolean(other)) {
+            return true
+        } else if (!Boolean(val) || !Boolean(other)) {
+            return false
+        }
         //判断长度是否一样
         if (Object.keys(val).length !== Object.keys(other).length) {
             return false
