--- a/miao/lodash/dropRigthWhile.html
+++ b/miao/lodash/dropRigthWhile.html
@@ -133,5 +133,15 @@
         }
         return str.split(/\.|\[|\]./g)
     }
-    debugger; console.log(dropRightWhile([{ "user": "barney", "active": true }, { "user": "fred", "active": false }, { "user": "pebbles", "active": false }], ["active", false])) 
+    function findIndex(ary, predicate, index) {
+        var pre = iteratee(predicate)
+        for (let i = index; i < ary.length; i++) {
+            console.log(pre(ary[i], i, ary))
+            if (pre(ary[i], i, ary)) {
+                return i
+            }
+        }
+        return -1
+    }
+   debugger; findIndex([{"user":"barney","active":false},{"user":"fred","active":false},{"user":"pebbles","active":true}],"active")
 </script>
